--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,7 +21,11 @@
 <body style="background-color:#F3F1DA">
 <div class="wrapper topWrap">
     <div class="carStatus">
-        <h1>CAR STOPPED</h1>
+        <h1 style="font-family:Georgia, serif;">CAR STOPPED
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-octagon-fill" viewBox="0 0 16 16">
+                <path d="M11.46.146A.5.5 0 0 0 11.107 0H4.893a.5.5 0 0 0-.353.146L.146 4.54A.5.5 0 0 0 0 4.893v6.214a.5.5 0 0 0 .146.353l4.394 4.394a.5.5 0 0 0 .353.146h6.214a.5.5 0 0 0 .353-.146l4.394-4.394a.5.5 0 0 0 .146-.353V4.893a.5.5 0 0 0-.146-.353L11.46.146zm-6.106 4.5L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708z"/>
+            </svg>
+        </h1>
     </div>
     <!--Coding Environment Opening-->
     <div class="blockyLand topWrap" id="blocklyDiv" data-toggle="tooltip" data-placement="top"
@@ -35,10 +39,10 @@
         </xml>
     </div>
     <div class="ResetRun">
-        <button class="button btn-success" onclick="clearworkspace()">
+        <button type="button" class="btn btn-primary btn-sm btn-danger" onclick="clearworkspace()">
             <a data-toggle="tooltip" data-placement="bottom" title="Click to clear the workspace">Reset</a>
         </button>
-        <button class="button btn-danger" onclick="runCode()">
+        <button type="button" class="btn btn-primary btn-sm btn-success" onclick="runCode()">
             <a data-toggle="tooltip" data-placement="bottom" title="Click to execute the blocks of instructions">Run</a>
         </button>
     </div>
@@ -55,7 +59,7 @@
     <div class="pastHistory">
         <div class="pastNested">
             <div>Past Instruction:</div>
-            <button class="button" style="background-color: #008CBA;">Run</button>
+            <button type="button" class="btn btn-primary btn-sm" style="background-color: #008CBA;">Run</button>
             <div class="historyListing">Insert past instruction thingies</div>
         </div>
     </div>
