include saving of data on web browser
localStorage variable named instructionHistory

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,7 +18,7 @@
     </div>
 </header>
 
-<body style="background-color:#F3F1DA">
+<body style="background-color:#F3F1DA;">
 <div class="wrapper topWrap">
     <div class="carStatus">
         <h1 style="font-family:Georgia, serif;">CAR STOPPED
