Added save blockly XML feature

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -59,7 +59,7 @@
     <div class="pastHistory">
         <div class="pastNested">
             <div>Past Instruction:</div>
-            <button type="button" class="btn btn-primary btn-sm" style="background-color: #008CBA;">Run</button>
+            <button type="button" onclick="xmlToWorkspace()" class="btn btn-primary btn-sm" style="background-color: #008CBA;">Run</button>
             <div class="historyListing">Insert past instruction thingies</div>
         </div>
     </div>
