--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -41,5 +41,6 @@
         grid-column:1/4;
         border:black 1px solid;
         align-self: stretch;
-        grid-auto-rows:200px;
+        grid-auto-flow: row;
+        padding: 10px;
     }
