--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -50,9 +50,11 @@
     <div class="sensorStats">
         <div>Real Time Data:</div>
         <div class="sensorNested">
-            <div>Speed: 0m/s</div>
-            <div>Orientation: Stationary</div>
-            <div>Distance: 0m</div>
+            {% for carData in carData %}
+            <div id="speed">Speed: {{ carData.speed }}(m/s) </div>
+            <div id="status"> Status: {{ carData.status }}</div>
+            <div id="distance">Distance: {{ carData.distance }}m</div>
+            {% endfor %}
         </div>
     </div>
 
