Edited CarController class.

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -25,9 +25,9 @@
             <div style="font-weight:bold;">Real Time Data:</div>
             <div class="sensorNested">
                 {% for carData in carData %}
-            <div id="speed">Speed: {{ carData.speed }}(m/s) </div>
+            <div id="speed">Speed: {{ carData.speed }} (m/s)</div>
             <div id="status"> Status: {{ carData.status }}</div>
-            <div id="distance">Distance: {{ carData.distance }}m</div>
+            <div id="distance">Distance: {{ carData.distance }} (m)</div>
             {% endfor %}
             </div>
         </div>
